# spinw

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  Contents.m  Jenkinsfile  README.md  install_spinw.m  read_struct.m  release.py  run_performance_tests.m  run_tests.m  test1.m
+sw_tests/: mock_function.m  systemstest_spinwave.m  systemstest_spinwave_KCu3As2O7.m  systemstest_spinwave_af33kagome.m  systemstest_spinwave_biquadratic.m  systemstest_spinwave_pcsmo.m  systemstest_spinwave_yb2ti2o7.m  unittest_spinwave.m
dat_files/: atom.csv  icons.mat  pointgroup.dat~
dev/: git.m  pyspinw.m  spinw3_icon.icns  spinwR.m  sw_animate.m  sw_apppath.m  sw_compile.m  sw_counter.m  sw_deployed.m  sw_deploytest.m  sw_finddim.m  sw_finddim3.m  sw_help.m  sw_idata.m  sw_initialize.m  sw_intsf.m  sw_mex.m  sw_orbital.m  sw_phonopy.m  sw_plotcell.m  sw_plotsf.m  sw_quadell.m  sw_release.m  sw_t2g.m
docs/: Makefile  _config.yml  conf.py  coord.rst  cryst.rst  docgen.m  funclist2.aaa  ham.rst  index.md  intro.rst  mag.rst  make.bat  mkdocs.yml  optmag.rst  requirements.txt  spinw_doc.sublime-project  spinwave.rst  sw_genhelp.m  swclass.rst
m_files/: class_handlelight.m  gm_planar.m  gm_planard.m  gm_spherical3d.m  gm_spherical3dd.m  sw_addsym.m  sw_annealfigure.m  sw_atomdata.m  sw_basismat.m  sw_bose.m  sw_cartesian.m  sw_conv.m  sw_converter.m  sw_draw.m  sw_econtract.m  sw_egrid.m  sw_ellipse.m  sw_filelist.m  sw_fstat.m  sw_fsub.m  sw_genatpos.m  sw_gencoord.m  sw_gensym.m  sw_gensymcoupling.m  sw_getobject.m  sw_handlelight.m  sw_instrument.m  sw_label.m  sw_mattype.m  sw_mff.m  sw_mirror.m  sw_model.m  sw_nvect.m  sw_omegasum.m  sw_parstr.m  sw_plotcell.m  sw_plotspec.m  sw_pointsym.m  sw_qscan.m  sw_quadell.m  (+12 more)
mfiles/: doctest2.m  gm_planar.m  gm_planard.m  sw_addobject.m  sw_addsym.m  sw_angle.m  sw_animate.m  sw_annealfigure.m  sw_annealplot.m  sw_arrow.m  sw_atomdata.m  sw_basismat.m  sw_cartesian.m  sw_cff.m  sw_circle.m  sw_circlesurf.m  (+63 more)
python/: README.md  build_ctf.m  pyproject.toml
python/matlab/: call.m
python/pyspinw/: __init__.py  plotting.py
python/pyspinw/ctfs/: SpinW_2023a.ctf  versions
python/tests/: systemtest_spinwave.py  test_spinw.py  test_spinwave_af33kagome.py
(+1914 files in other folders)
